--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,4 +13,21 @@ pipeline{
                 }
             }
         }
+        stages('Test') {
+            steps {
+                sh "mvn test"
+            }
+            post {
+                always {
+                    junit 'target/surefire-reports/*.xml'
+                }
+            }
+            
+        }
+        
+        stage('Deploy'){
+            steps {
+                sh 'java -jar target/my-app-1.0-SNAPSHOT.jar'
+            }
+        }
 }
