--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,8 +12,8 @@ pipeline{
                     sh "mvn -B -DskipTests clean package"
                 }
             }
-        }
-        stages('Test') {
+        
+        stage('Test') {
             steps {
                 sh "mvn test"
             }
@@ -30,4 +30,5 @@ pipeline{
                 sh 'java -jar target/my-app-1.0-SNAPSHOT.jar'
             }
         }
+    }    
 }
