--- a/jenkinsfile
+++ b/jenkinsfile
@@ -46,21 +46,21 @@ pipeline{
         stage ('Exec Maven'){
             steps {
                 
-                withSonarQubeEnv('sonarqube') {
+                /*withSonarQubeEnv('sonarqube') {
                     
                     withMaven(maven:'maven3.6.0') {
                         sh 'mvn clean package sonar:sonar'
                     }
-                }
+                } */
                 
-                /*rtMavenRun(
+                rtMavenRun(
                     tool: 'maven3.6.0',
                     pom: 'pom.xml',
-                    goals: 'clean install',
+                    goals: 'clean install sonar:sonar',
                     deployerId: "MAVEN_DEPLOYER",
                     resolverId: "MAVEN_RESOLVER"
                     
-                    ) */
+                    ) 
             }
         }
             
