--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,12 +8,12 @@ pipeline{
                 }
             }
             
-           /* stage('SonarQube analysis') {
+           stage('SonarQube analysis') {
                 withSonarQubeEnv('sonarqube') {
                 // requires SonarQube Scanner for Maven 3.2+
                 sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
                 }
-            } */
+            } 
  
             
             stage('Artifactory Configuration'){
