--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,13 @@
 pipeline{
         agent any
+      
+      
+      tools {
+            maven 'maven3.6.0'
+            jdk 'java1.8.0'
         
+      }
+      
         stages {
             stage('Clone'){
                 steps{
