--- a/jenkinsfile
+++ b/jenkinsfile
@@ -65,7 +65,7 @@ pipeline{
                 rtMavenRun(
                     tool: 'maven3.6.0',
                     pom: 'pom.xml',
-                    goals: 'clean install sonar:sonar',
+                    goals: 'clean install sonar:sonarscanner',
                     deployerId: "MAVEN_DEPLOYER",
                     resolverId: "MAVEN_RESOLVER"
                     
